Corrections for SEO & repaired issue with nav-collapse in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,20 @@ h1, h2, h3, h4, h5 {
 
 h1 {font-size: 190%;}
 
-h3 {padding-bottom: 0.5em;}
+h2 {
+    padding-bottom: 0.5em;
+    font-size: 24px;
+}
 
-h4 {padding-bottom: 1em;}
+h3 {
+    padding-bottom: 1em;
+    font-size: 18px;
+}
 
-h5 {padding-bottom: 0.5em;}
+h4 {
+    padding-bottom: 0.5em;
+    font-size: 14px;
+}
 
 hr {
   border-color: #983626;
